feat: API Lavou com Express + Prisma

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-DATABASE_URL="postgresql://neondb_owner:npg_FmXjCL26WNli@ep-still-cherry-ac7yg00i-pooler.sa-east-1.aws.neon.tech/neondb?sslmode=require&channel_binding=require"
+DATABASE_URL="postgresql://neondb_owner:npg_zVjhar2m3NvD@ep-lucky-bar-ac1j5zux-pooler.sa-east-1.aws.neon.tech/neondb?sslmode=require&channel_binding=require"
 JWT_SECRET="uma_chave_secreta"
